--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -1,10 +1,7 @@
-/* Import Tailwind CSS base styles */
 @tailwind base;
 
-/* Import Tailwind CSS component styles */
 @tailwind components;
 
-/* Import Tailwind CSS utility styles */
 @tailwind utilities;
 
 @layer base {
@@ -31,7 +28,6 @@
     --radius: 0.5rem;
   }
 
-  /* Dark mode color variables */
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
@@ -54,20 +50,16 @@
     --ring: 212.7 26.8% 83.9%;
   }
 
-  /* Apply border to all elements */
   * {
     @apply border-border;
   }
 
-  /* Apply background and foreground colors to body */
-  body {
+  /* body {
     @apply bg-background text-foreground;
-  }
+  } */
 }
 
-/* Define utility classes */
 @layer utilities {
-  /* Utility class to reset font styles */
   .not-apply-font {
     font-family: inherit;
     font-weight: inherit;
@@ -77,95 +69,5 @@
     letter-spacing: inherit;
     text-transform: inherit;
     text-decoration: inherit;
-  }
-}
-
-
-/* .tiptap.tiptap,.ProseMirror{
-  outline: none;
-} */
-
-.tiptap,
-.ProseMirror {
-  outline: none;
-}
-
-
-.blockquote {
-  border-left: 3px solid rgba(#0d0d0d, 0.1);
-  padding-left: 1rem;
-}
-
-.listitem{
-  list-style-type: disc;
-  /* list-style-position: inside; */
-  padding-left: 1rem;
-}
-
-
-pre {
-  background: #0d0d0d;
-  border-radius: 0.5rem;
-  color: #fff;
-  font-family: "JetBrainsMono", monospace;
-  padding: 0.75rem 1rem;
-
-  code {
-    background: none;
-    color: inherit;
-    font-size: 0.8rem;
-    padding: 0;
-  }
-
-  .hljs-comment,
-  .hljs-quote {
-    color: #616161;
-  }
-
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-attribute,
-  .hljs-tag,
-  .hljs-name,
-  .hljs-regexp,
-  .hljs-link,
-  .hljs-name,
-  .hljs-selector-id,
-  .hljs-selector-class {
-    color: #f98181;
-  }
-
-  .hljs-number,
-  .hljs-meta,
-  .hljs-built_in,
-  .hljs-builtin-name,
-  .hljs-literal,
-  .hljs-type,
-  .hljs-params {
-    color: #fbbc88;
-  }
-
-  .hljs-string,
-  .hljs-symbol,
-  .hljs-bullet {
-    color: #b9f18d;
-  }
-
-  .hljs-title,
-  .hljs-section {
-    color: #faf594;
-  }
-
-  .hljs-keyword,
-  .hljs-selector-tag {
-    color: #70cff8;
-  }
-
-  .hljs-emphasis {
-    font-style: italic;
-  }
-
-  .hljs-strong {
-    font-weight: 700;
   }
 }
